# cpp-abstract-base-class

./: AbstractBaseClass.cpp  Base.cpp  Base.h  CMakeLists.txt  Employee.cpp  Employee.h  Header.h  README.md  Student.cpp  Student.h
